--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ analytics:
 author:
   name             : "PENG Xiaojiang"
   avatar           : "profile.png"
-  bio              : "Associate Prof."
+  bio              : "Associate Professor"
   location         : "Shenzhen"
   employer         :
   googlescholar    : "https://scholar.google.com/citations?user=7oRD67kAAAAJ&hl=zh-CN"
