--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "PENG Xiaojiang"
+title                    : "PENG Xiaojiang's Homepage"
 title_separator          : "-"
 name                     : &name "PENG Xiaojiang"
 description              : &description "personal homepage"
