--- a/_config.yml
+++ b/_config.yml
@@ -233,7 +233,7 @@ defaults:
   # _talks
   - scope:
       path: ""
-      type: talks
+      type: news
     values:
       layout: talk
       author_profile: true
