--- a/_config.yml
+++ b/_config.yml
@@ -230,7 +230,7 @@ defaults:
       author_profile: true
       share: true
       comment: true
-  # _talks
+  # _news
   - scope:
       path: ""
       type: news
