--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,8 +9,8 @@ main:
   - title: "Publications"
     url: /publications/
 
-  - title: "Code&Data"
-    url: /codedata/    
+  - title: "Research"
+    url: /research/    
 
   - title: "Students"
     url: /students/    
