--- a/_config.yml
+++ b/_config.yml
@@ -7,9 +7,9 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "PENG Xiaojiang's Homepage"
+title                    : "Xiaojiang PENG"
 title_separator          : "-"
-name                     : &name "PENG Xiaojiang"
+name                     : &name "Xiaojiang PENG"
 description              : &description "personal homepage"
 url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
